formatted with par

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -164,26 +164,24 @@ Formally put, the project's goals are
         precision. 
 \end{itemize}
 
-\chapter{Context}
-\section{The BBC micro:bit} The BBC micro:bit is a microprocessor device aimed at
-bringing programming to young adults and teenagers. At present it supports a number of 
-different programming languages, most visibly \textit{MicroPython, JavaScript} and \textit{TouchDevelop}.
+\chapter{Context} \section{The BBC micro:bit} The BBC micro:bit is a microprocessor device aimed at
+bringing programming to young adults and teenagers. At present it supports a number of different
+programming languages, most visibly \textit{MicroPython, JavaScript} and \textit{TouchDevelop}.
 These languages, while mainstream and popular,\footnote{With the exception of \textit{TouchDevelop}
-    of course.} all fundamentally support the same programming paradigm, the imperative. Doubtless it is
-vital for all would-be coders to have knowledge and experience with the imperative/procedural
+of course.} all fundamentally support the same programming paradigm, the imperative. Doubtless it
+is vital for all would-be coders to have knowledge and experience with the imperative/procedural
 approach to structuring code, but it is not the only approach, and perhaps not the best for
-beginners or those with only a passing interest in coding. It is the contention of the author that a
-syntactically simple, (relatively) \textit{pure} functional language would make for an ideal 
-teaching tool on the micro:bit, allowing the student to focus almost entirely on the problem domain, 
-and a great deal less on syntax and \textit{boilerplate}.
-Functional languages are increasingly being used in every area of real-world applications. Regarding 
-robotics, in which Rae has expressed an interest, there has already been some research conducted 
-in the use of the declarative style for low level robotics programming\footnote{Lambda in Motion: Controlling
-    Robots with Haskell, Peterson John, Paul Hudak and Conal Elliott}. This at least demonstrates
-that the functional style is applicable to the problem area, but further research would be required
-to test the suitability of the micro:bit as a low-level controller. Certainly, anything which can be
-programmed in MicroPython could also be written (possible more briefly and with fewer bugs) in a
-functional language.
+beginners or those with only a passing interest in coding. It is the contention of the author that
+a syntactically simple, (relatively) \textit{pure} functional language would make for an ideal
+teaching tool on the micro:bit, allowing the student to focus almost entirely on the problem domain,
+and a great deal less on syntax and \textit{boilerplate}. Functional languages are increasingly
+being used in every area of real-world applications. Regarding robotics, in which Rae has expressed
+an interest, there has already been some research conducted in the use of the declarative style
+for low level robotics programming\footnote{Lambda in Motion: Controlling Robots with Haskell,
+Peterson John, Paul Hudak and Conal Elliott}. This at least demonstrates that the functional style
+is applicable to the problem area, but further research would be required to test the suitability of
+the micro:bit as a low-level controller. Certainly, anything which can be programmed in MicroPython
+could also be written (possible more briefly and with fewer bugs) in a functional language.
 
 \section{Teaching Languages}
 There is a long history of languages designed with the express purpose of teaching rather than
@@ -233,22 +231,22 @@ To solve this in Python using functional concepts, something like this might be 
 
 \mint{python}|sum(list(filter((lambda x: x == 3), nums)))|
 
-This is clearly an improvement in terms of brevity, and is perhaps a little easier to understand. The
-main difficulty here in the physical writing of the code is balancing the parentheses, but any good
-editor should be able to do this automatically. The filter
-higher order function \textit{filter} has a fairly clear meaning to any native English speaker.
-However the rather obscure use of \textit{list} and, even worse, \textit{lambda} still makes
-this rather difficult for the student. There is a number of topics which would need to be explained
-here which reduce the utility of this as a teaching example. Why is the syntax still relatively
-cumbersome? Because Python was not conceived as a functional language, many of these features have
-been grafted onto a traditional imperative substructure, and the syntax reveals this.
-The equivalent function in Haskell would be:
+This is clearly an improvement in terms of brevity, and is perhaps a little easier to understand.
+The main difficulty here in the physical writing of the code is balancing the parentheses,
+but any good editor should be able to do this automatically. The filter higher order function
+\textit{filter} has a fairly clear meaning to any native English speaker. However the rather obscure
+use of \textit{list} and, even worse, \textit{lambda} still makes this rather difficult for the
+student. There is a number of topics which would need to be explained here which reduce the utility
+of this as a teaching example. Why is the syntax still relatively cumbersome? Because Python was
+not conceived as a functional language, many of these features have been grafted onto a traditional
+imperative substructure, and the syntax reveals this. The equivalent function in Haskell would be:
 
 \mint{haskell}|sum (filter (==3) nums)|
 
-Haskell provides some syntactic sugar to reduce the number of brackets even 
+Haskell provides some syntactic sugar to reduce the number of brackets even
 further\footnote{Apologies for the slightly misleading typography here, the package being used for
-syntax highlighting seems unable to properly interpret \LaTeX escape symbols. It should read simply \$.}
+syntax highlighting seems unable to properly interpret \LaTeX escape symbols. It should read simply
+\$.}
 
 \mint{haskell}|sum \$ filter (==3) nums|    
 To make all of this code more generic the Python needs to be wrapped in a function definition:
@@ -270,9 +268,9 @@ In fact, we can do even better than this:
 
 \mint{haskell}|sumAllOccurrences p ns = sum \$ filter p ns|
 
-where p is any predicate we care to pass in, such as (==3) or (\textless2). The python code does not prevent
-someone from passing in junk values (leading to a runtime error) but the Haskell code, with the
-addition of a simple \textit{type signature} can easily be altered to only receive integers,
+where p is any predicate we care to pass in, such as (==3) or (\textless2). The python code does not
+prevent someone from passing in junk values (leading to a runtime error) but the Haskell code, with
+the addition of a simple \textit{type signature} can easily be altered to only receive integers,
 ensuring type safety. This need not be explained to the student in these terms, but they will
 benefit from their program not crashing in unexpected and difficult to detect ways.
 
@@ -287,23 +285,22 @@ but it would still need to be couched inside a function definition.\footnote{Thi
 disingenuous, as a list comprehension, in both Python and Haskell, would work well here. It does
 serve to illustrate the general point. Of course, list comprehensions were first introduced in
 functional programming languages.}. In this simple example much of the essence of the functional
-programming style can be seen. The advantages are clear: fewer lines of code usually means fewer bugs and less
-development time. Students can get to solving problems almost immediately, without the worry (or
-rather a reduced worry) about the syntactical correctness of their loops, or balancing a host of
-nested parentheses. 
-%Haskell is a large and complicated language and not suitable for younger students\footnote{make a
-%    reference here or somewhere to the eitherT library, by Kmett}. 
-Its runtime is large and complex, and would almost certainly not run efficiently on the micro:bit. 
-Its emphasis on purity has led it to introduce a number of features which, while theoretically elegant, are
-complex even for experienced programmers. There is however a family of other, related, languages, mostly
-descended directly or indirectly from ML\footnote{Excepting the Lisp family representatives,
-\textit{Common Lisp} and \textit{Scheme}}, which place different emphasis on parts of the functional
-paradigm.\footnote{The table is a simplified (and slight corrected) version of the available from
-\url{https://en.wikipedia.org/wiki/Comparison_of_functional_programming_languages}. Monads, monoids
-and functors, while important concepts in functional languages, are definitely out of scope for a
-teaching language to teenagers. The approach taken by \textit{Miranda} is that which will be followed
-in the suggested implementation, hiding unnecessary detail with the loss of a little referential
-transparency.}
+programming style can be seen. The advantages are clear: fewer lines of code usually means fewer
+bugs and less development time. Students can get to solving problems almost immediately, without the
+worry (or rather a reduced worry) about the syntactical correctness of their loops, or balancing
+a host of nested parentheses. %Haskell is a large and complicated language and not suitable for
+younger students\footnote{make a reference here or somewhere to the eitherT library, by Kmett}.
+Its runtime is large and complex, and would almost certainly not run efficiently on the micro:bit.
+Its emphasis on purity has led it to introduce a number of features which, while theoretically
+elegant, are complex even for experienced programmers. There is however a family of other, related,
+languages, mostly descended directly or indirectly from ML\footnote{Excepting the Lisp family
+representatives, \textit{Common Lisp} and \textit{Scheme}}, which place different emphasis on parts
+of the functional paradigm.\footnote{The table is a simplified (and slight corrected) version of the
+available from \url{https://en.wikipedia.org/wiki/Comparison_of_functional_programming_languages}.
+Monads, monoids and functors, while important concepts in functional languages, are definitely out
+of scope for a teaching language to teenagers. The approach taken by \textit{Miranda} is that which
+will be followed in the suggested implementation, hiding unnecessary detail with the loss of a
+little referential transparency.}
 
 \section{Research}
 With the thought in mind of creating a Miranda style language for the micro:bit, came the necessity
@@ -683,8 +680,7 @@ At a trivial level, primitives have a predetermined type, so \textbf{(Lit (LInt 
 \textbf{Number}, likewise \textbf{(Lit (LBoolean true))} has type \textbf{Boolean}.
 
 At a slightly higher level, many operators only work on certain types, so the presence of these
-operators can help the inference system to resolve the constraints. For example
-
+operators can help the inference system to resolve the constraints. For example 
 (+) is defined to work only on objects of type Number.
 
 An expression of the type \textit{true + false} will fail with a \textit{unification error} as (+)
@@ -745,8 +741,8 @@ is the ability to print the parse tree of an expression within the repl. See fig
 \section{Implementation}
 MicroML is written in Haskell throughout. However it should be stated that this is not the pure
 Haskell of the 2010 report, but makes use of a number of extremely useful extensions provided by
-the Glasgow Haskell Compiler, GHC\. This does unfortunately limit the portability of microML to a certain extent, 
-but it would also be reasonable to say the GHC has largely become the `de facto' Haskell implementation, moving the
+the Glasgow Haskell Compiler, GHC.\ This unfortunately does limit the portability of microML, 
+but it would be reasonable to say the GHC has largely become the `de facto' Haskell implementation, moving the
 language as a whole more in the direction of the Python model, which is defined by CPython, 
 rather than a formal document description.
 
