--- a/docs/report.tex
+++ b/docs/report.tex
@@ -164,7 +164,8 @@ Formally put, the project's goals are
         precision. 
 \end{itemize}
 
-\chapter{Context} \section{The BBC micro:bit} The BBC micro:bit is a microprocessor device aimed at
+\chapter{Context} 
+\section{The BBC micro:bit} The BBC micro:bit is a microprocessor device aimed at
 bringing programming to young adults and teenagers. At present it supports a number of different
 programming languages, most visibly \textit{MicroPython, JavaScript} and \textit{TouchDevelop}.
 These languages, while mainstream and popular,\footnote{With the exception of \textit{TouchDevelop}
