--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -11,17 +11,17 @@
     author={Torczon, Linda and Keith Cooper},
     title={Engineering A Compiler},
     publisher={Morgan Kaufmann},
-    year=2007,
+    year=2007
 }
 
 @book{spj1,
    author={Peyton Jones, Simon L and David R Lester},
    title={Implementing Functional Languages: a tutorial},
-   publisher={self-published}
-   year=2000,
+   publisher={self-published},
+   year=2000
 }
 
-@book(spj2,
+@book{spj2,
     author={Peyton Jones, Simon L},
     title={The Implementation of Functional Programming Languages},
     publisher={Prentice Hall},
@@ -66,3 +66,12 @@
     author = {Philippe de Groote},
     title = {A Simple Calculus of Exception Handling}
 }
+
+@book{Pierce:2002:TPL:509043,
+ author = {Pierce, Benjamin C.},
+ title = {Types and Programming Languages},
+ year = {2002},
+ isbn = {0262162091, 9780262162098},
+ edition = {1st},
+ publisher = {The MIT Press},
+} 
